--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,7 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "/Users/obaidahmed/Day2-app/node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
